--- a/Job Portal System/Pages/Shared/_Layout.cshtml
+++ b/Job Portal System/Pages/Shared/_Layout.cshtml
@@ -22,33 +22,30 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-main border-bottom box-shadow mb-3"
-             style="height: 55px">
-            <div class="nav-container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">
-                    <div class="d-flex" style="align-items: center">
-                        <div style="font-size:larger">
-                            <i class="fa fa-handshake"></i>
-                        </div>
-                        <div class="pl-2">handshake</div>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-main border-bottom box-shadow">
+        <div class="nav-container">
+            <a class="navbar-brand" asp-area="" asp-page="/Index">
+                <div class="d-flex" style="align-items: center">
+                    <div style="font-size:larger">
+                        <i class="fa fa-handshake"></i>
                     </div>
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                    </ul>
+                    <div class="pl-2">handshake</div>
                 </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <partial name="_LoginPartial" />
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
     <partial name="_CookieConsentPartial" />
     @RenderBody()
     @*<div class="container">
