--- a/Job Portal System/Pages/Index.cshtml
+++ b/Job Portal System/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="search-box">
+<div class="search-box ff-gothic">
     <div class="container" style="width:684px;">
         <div>
             <h2 class="text-center">Searching is helpfull!</h2>
