--- a/Job Portal System/Pages/Shared/_Layout.cshtml
+++ b/Job Portal System/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - handshake</title>
+    <title>@ViewData["Title"] - Handshake</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -47,7 +47,13 @@
         </div>
     </nav>
     <partial name="_CookieConsentPartial" />
-    @RenderBody()
+
+    <div class="dash-container">
+        <partial name="_SidebarPartial" />
+        <div id="content">
+            @RenderBody()
+        </div>
+    </div>
     @*<div class="container">
             <partial name="_CookieConsentPartial" />
             <main role="main" class="pb-3">
@@ -57,7 +63,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - handshake - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2019 - Handshake - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
